  (https://github.com/projectatomic/bubblewrap)

* The 'cs_question_type_defaults' variable can be used to set default values of
  variables for specific question types.

* The 'catsoop.check' module is now available.  It provides access to a small
  library of common check functions (to be used as 'csq_check_function' or
  similar).  It is accessible during normal page loads as 'csm_check'.

CHANGED:

* Updated KaTeX to version 0.10.0-beta.

* Updated MathJax to version 2.7.4.

* Updated highlight.js to version 9.12.0.

* URL format for static files has changed (__STATIC__ -> _static).

* URL format for utilities has changed (cs_util -> _util).

* 'csq_threshold' and 'csq_ratio_check' have been replaced with
  'csq_ratio_threshold' and 'csq_absolute_threshold' in the 'expression'
  question type.  The more lenient of the two thresholds is used.  Default
  behavior is the same as before.

DEPRECATED:

* The special directory name __MEDIA__ has been renamed to __STATIC__ to better
  reflect its purpose.  __MEDIA__ will be removed in a future version.  Use
  __STATIC__ instead.

* The catsoop.tools library was renamed to catsoop.thirdparty to better reflect
  its contents.  The csm_tools pointer to these libraries will be removed in a
  future version.  Use csm_thirdparty instead.  Many of the libraries
  themselves were also removed (and should be imported directly, rather than
  accessed via csm_thirdparty)

* print should now be used instead of cs_print to inject page content from
  within <python> tags.  cs_print will be removed in a future version.

* The 'csq_multiplechoice_renderer' and 'csq_multiplechoice_soln_mode' variables
  have been renamed to 'csq_renderer' and 'csq_soln_mode'.  The options
  including '_multiplechoice' will be removed in a future version.

REMOVED:

* Removed jQuery, Bootstrap, and SweetAlert2 (replaced with our own JS/CSS).

* Removed cs_util/process_theme and removed dependence on outside fonts.
